--- a/Week2/style.css
+++ b/Week2/style.css
@@ -15,7 +15,7 @@ header {
     color: #fff;
     text-align: center;
     padding: 20px;
-    position:fixed;
+
     width: 100%;
 }
 
@@ -144,19 +144,29 @@ main h3 {
 .cta-container {
     text-align: center;
     padding: 20px;
-    background-color: #f5f5f5;
+    background-color: #282689;
+    color: #fff;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #87089a;
+    border-radius: 30px;
     margin-top: 30px;
+    margin-bottom: 10px;
+    font-size: large;
+   
 }
 
 .cta-button {
     display: inline-block;
-    padding: 10px 20px;
-    background-color: #007BFF;
+    padding: 5px 7px;
+    background-color: #87089a;
+    font-size: 24px;
     color: #ffffff;
-    text-decoration: none;
+    text-decoration: wavy;
+    text-transform: uppercase;
     border-radius: 5px;
     font-weight: bold;
-    margin-top: 15px;
+    margin-top: 5px;
     transition: background-color 0.3s;
 }
 
