--- a/Week2/style.css
+++ b/Week2/style.css
@@ -107,8 +107,8 @@ main h3 {
 }
 
 .service-column {
-    flex-basis: calc(25% - 20px);
-    max-width: calc(25% - 20px);
+    flex-basis: calc(50% - 20px);
+    max-width: calc(50% - 20px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -116,7 +116,8 @@ main h3 {
 }
 
 .service-column img {
-    width: 180px;
+    width: auto;
+    max-width: 100%;
     height: auto;
     margin-bottom: 10px;
 }
