--- a/Week2/style.css
+++ b/Week2/style.css
@@ -14,9 +14,9 @@ header {
     background-color: #282689;
     color: #fff;
     text-align: center;
-    padding: 20px;
-
+    padding: 10px;
     width: 100%;
+    
 }
 
 .headeraH1 {
@@ -37,14 +37,17 @@ header {
 
 /* Navigation Styles */
 
+nav{
+    position: sticky;
+    top:0px;
 
+}
 nav ul {
     background-color: #333;
     color: #fff;
     text-align: center;
     list-style-type: none;
-    margin: 0;
-    padding: 20px;
+    margin: 0px;
 }
 
 nav li {
@@ -163,7 +166,7 @@ main h3 {
     background-color: #87089a;
     font-size: 24px;
     color: #ffffff;
-    text-decoration: wavy;
+    text-decoration: underline;
     text-transform: uppercase;
     border-radius: 5px;
     font-weight: bold;
