--- a/Week3/style.css
+++ b/Week3/style.css
@@ -217,3 +217,89 @@ footer p {
     padding: 5px;
     font-weight: bold;
 }
+/*Here, will be the Gallery slide show style*/ 
+* { box-sizing: border-box; } 
+.slideshow-img { vertical-align: middle; width: 100%; }
+img{width: 100%;
+    height: auto;
+}
+
+/* Position the image container (needed to position the left and right arrows) */ 
+.container { position: relative; } 
+/* Hide the images by default */ 
+.MySlide { display:none; }
+/* Add a pointer when hovering over the thumbnail images */ 
+.cursor { cursor: pointer; }
+/* Next & previous buttons */ 
+.prev, .next {   
+    cursor: pointer; 
+    position: absolute; 
+    top: 40%;
+    width: auto; 
+    padding: 16px; 
+    margin-top: -50px; 
+    color: white;
+    font-weight: bold; font-size: 20px; 
+    border-radius: 0 3px 3px 0; 
+    user-select: none; 
+    -webkit-user-select: none;
+}
+/* Position the "next button" to the right */ 
+.next { right: 0; border-radius: 3px 0 0 3px; }
+ /* On hover, add a black background color with a little bit see-through */ 
+ .prev:hover, .next:hover { 
+    background-color: rgba(0, 0, 0, 0.8);
+ }
+ /* Number text (1/3 etc) */ 
+ .numbertext { 
+    color: #f2f2f2; 
+    font-size: 12px; 
+    padding: 8px 12px; 
+    position: absolute; 
+    top: 0; }
+
+    #form { 
+        width: 300px; 
+        margin: 20vh auto 0 auto; /* This centers the form vertically and horizontally */
+        padding: 20px; 
+        background-color: whitesmoke; /* Light gray background for the form */ 
+        border-radius: 4px; /* Rounded corners for the form */ 
+        font-size: 12px; }
+/* Style for the form's heading: setting the text color and alignment */ 
+#form h1 { 
+    color: #0f2027; /* Dark text color for the heading */ 
+    text-align: center; /* Center-align the heading */ }
+    /* Style for the form's button: padding, top margin, full width, text color, background color, no border, and rounded corners */
+.login{
+    width: 300px; 
+    margin: 20vh auto 0 auto; /* This centers the form vertically and horizontally */
+    padding: 20px; 
+    background-color: whitesmoke; /* Light gray background for the form */ 
+    border-radius: 4px; /* Rounded corners for the form */ 
+    font-size: 15px; 
+}
+        input[type=submit] {
+        
+        background-color: #282689;
+        border: none;
+        border-radius: 4px;
+        color: white;
+        padding: 16px 32px;
+        text-decoration: none;
+        margin: 4px 2px;
+        cursor: pointer;
+        position: center;
+    }
+/* Container for input fields: using flexbox for layout, column direction */ 
+.input-control { 
+    display: flex; 
+    flex-direction: column; /* Stack the children (label, input, error message) vertically*/
+}
+.input-control input{ 
+    border: 2px solid #f0f0f0; /* Light gray border for the inputs */ 
+    border-radius: 4px; /* Rounded corners for the inputs */ 
+    display: block; /* Display input field as a block */ 
+    font-size: 12px; /* Text size within the input field */ 
+    padding: 10px; /* Space inside the input field */ 
+    width: 100%; /* Input field takes up 100% of the form's width */ 
+    margin: 5px 0 10px 0; /* Margin around the input field */}
