--- a/Week3/style.css
+++ b/Week3/style.css
@@ -258,7 +258,7 @@ img{width: 100%;
     position: absolute; 
     top: 0; }
 
-    #form { 
+#form { 
         width: 300px; 
         margin: 20vh auto 0 auto; /* This centers the form vertically and horizontally */
         padding: 20px; 
@@ -278,18 +278,16 @@ img{width: 100%;
     border-radius: 4px; /* Rounded corners for the form */ 
     font-size: 15px; 
 }
-        input[type=submit] {
-        
-        background-color: #282689;
-        border: none;
-        border-radius: 4px;
-        color: white;
-        padding: 16px 32px;
-        text-decoration: none;
-        margin: 4px 2px;
-        cursor: pointer;
-        position: center;
-    }
+.login button{
+    background-color: #282689;
+    border: none;
+    border-radius: 4px;
+    color: white !important;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 /* Container for input fields: using flexbox for layout, column direction */ 
 .input-control { 
     display: flex; 
@@ -303,3 +301,13 @@ img{width: 100%;
     padding: 10px; /* Space inside the input field */ 
     width: 100%; /* Input field takes up 100% of the form's width */ 
     margin: 5px 0 10px 0; /* Margin around the input field */}
+    /* Error message: text size, red text color, and margin */
+.input-control .error { 
+        font-size: 14px; 
+        color: red; 
+        margin-top: -5px; 
+        margin-bottom: 10px; 
+    }
+.input-control.validInput{
+    border: 3px solid green;
+}
