--- a/Week4/style.css
+++ b/Week4/style.css
@@ -1,344 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Abel&family=Oswald&display=swap');
-/* Reset Styles */
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    color: #505050;
-    font-family: 'Abel', sans-serif;
-    font-family: 'Oswald', sans-serif;
-}
-
-/* Header Styles */
-header {
-    background-color: #282689;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    width: 100%;
-    
-}
-
-.headeraH1 {
-    margin: 0;
-}
-
-.banner {
-    width: 100%;
-    overflow: hidden;
-}
-
-.banner img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-
-/* Navigation Styles */
-
-nav{
-    position: sticky;
-    top:0px;
-
-}
-nav ul {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    list-style-type: none;
-    margin: 0px;
-}
-
-nav li {
-    display: inline-block;
-}
-
-nav a {
-    display: block;
-    color: #fff;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    transition: background-color 0.3s;  /* Smooth transition for hover effect */
-}
-
-nav a:hover {
-    background-color: #505050;  /* Darker shade for hover */
-}
-
-/* Banner Styles */
-.banner-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    width: 100%;
-    overflow: hidden;
-}
-
-.centered-banner {
-    padding: 30px;
-    max-width: 80%;
-    height: auto;
-}
-
-/* Main Content Styles */
-main {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-.services {
-    margin: 2rem auto;
-    padding: 2rem;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-
-main h3 {
-    margin-top: 20px;
-}
-
-/* Service Columns */
-.services-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-.service-column {
-    flex-basis: calc(50% - 20px);
-    max-width: calc(50% - 20px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.service-column img {
-    width: auto;
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 10px;
-}
-
-.service-column h3 {
-    margin-bottom: 5px;
-}
-
-/* Media Queries for Responsiveness */
-@media (max-width: 800px) {
-    .service-column {
-        flex-basis: calc(50% - 20px);
-        max-width: calc(50% - 20px);
-    }
-}
-
-@media (max-width: 700px) {
-    .service-column {
-        flex-basis: 100%;
-        max-width: 100%;
-    }
-}
-
-/* Call to Action Styles */
-.cta-container {
-    text-align: center;
-    padding: 20px;
-    background-color: #282689;
-    color: #fff;
-    border-style: solid;
-    border-width: 5px;
-    border-color: #87089a;
-    border-radius: 30px;
-    margin-top: 30px;
-    margin-bottom: 10px;
-    font-size: large;
-    text-decoration:underline;
-   
-}
-
-.cta-button {
-    display: inline-block;
-    padding: 5px 7px;
-    background-color: #87089a;
-    font-size: 24px;
-    color: #ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    border-radius: 5px;
-    font-weight: bold;
-    margin-top: 5px;
-    transition: background-color 0.3s;
-}
-
-.cta-button:hover {
-    background-color: #0056b3;
-}
-
-/* Footer Styles */
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-}
-
-footer ul {
-    margin: 0;
-}
-
-footer li {
-    display: inline-block;
-    margin-right: 10px;
-}
-
-footer a {
-    color: #fff;
-    text-decoration: none;
-    transition: color 0.3s;  /* Smooth transition for hover effect */
-}
-
-footer a:hover {
-    color: #b3b3b3;  /* Lighter color on hover */
-}
-
-footer p {
-    margin: 10px 0 0;
-}
-/* Highliting the current page */
-.currentPage {
-    color: #7f0b68;
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 5px;
-    font-weight: bold;
-}
-* {box-sizing:border-box}
-.container{
-    max-width: 1000px;
-    position:relative;
-    margin: auto;
-}
-.MySlide{
-    display: none;
-}
-.MySlide img{
-    width: 100%;
-    height: auto;
-    position: relative;
-}
-.prev, .next { 
-    cursor: pointer; 
-    position: absolute; 
-    top: 55%; 
-    width: auto; 
-    padding: 16px; 
-    margin-top: -50px; 
-    color: white; 
-    font-weight: bold; 
-    font-size: 20px; 
-    border-radius: 0 3px 3px 0; 
-    user-select: none; 
-    -webkit-user-select: none;
-}
-.next 
-{ 
-    right: 0px;
-    left: initial; 
-    border-radius: 3px 0 0 3px; 
-}
-.numbertext { 
-    color: #f2f2f2; 
-    font-size: 12px; 
-    padding: 8px 12px; 
-    position: absolute; top: 0;
-}
-
-
-#form { 
-        width: 300px; 
-        margin: 20vh auto 0 auto; /* This centers the form vertically and horizontally */
-        padding: 20px; 
-        background-color: whitesmoke; /* Light gray background for the form */ 
-        border-radius: 4px; /* Rounded corners for the form */ 
-        font-size: 12px; }
-/* Style for the form's heading: setting the text color and alignment */ 
-#form h1 { 
-    color: #0f2027; /* Dark text color for the heading */ 
-    text-align: center; /* Center-align the heading */ }
-    /* Style for the form's button: padding, top margin, full width, text color, background color, no border, and rounded corners */
-.login{
-    width: 300px; 
-    margin: 20vh auto 0 auto; /* This centers the form vertically and horizontally */
-    padding: 20px; 
-    background-color: whitesmoke; /* Light gray background for the form */ 
-    border-radius: 4px; /* Rounded corners for the form */ 
-    font-size: 15px; 
-}
-.login button{
-    background-color: #282689;
-    border: none;
-    border-radius: 4px;
-    color: white !important;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-/* Container for input fields: using flexbox for layout, column direction */ 
-.input-control { 
-    display: flex; 
-    flex-direction: column; /* Stack the children (label, input, error message) vertically*/
-}
-.input-control input{ 
-    border: 2px solid #f0f0f0; /* Light gray border for the inputs */ 
-    border-radius: 4px; /* Rounded corners for the inputs */ 
-    display: block; /* Display input field as a block */ 
-    font-size: 12px; /* Text size within the input field */ 
-    padding: 10px; /* Space inside the input field */ 
-    width: 100%; /* Input field takes up 100% of the form's width */ 
-    margin: 5px 0 10px 0; /* Margin around the input field */}
-    /* Error message: text size, red text color, and margin */
-.input-control .error { 
-        font-size: 14px; 
-        color: red; 
-        margin-top: -5px; 
-        margin-bottom: 10px; 
-    }
-.input-control.validInput{
-    border: 3px solid green;
-}
-
-/*Cities */
-
-.htmlCities{ 
-    scroll-behavior: smooth; 
-}
-
-.bodyCities, .htmlCities{
+body, html { 
     font-family: 'Helvetica', cursive; 
     font-size: 1.09rem; 
-    color: #23112e;
-}
-.citiesHeader { 
-    background-color: yellow; 
+    color: #23112e; 
+    } 
+    html { 
+    scroll-behavior: smooth; 
+    } 
+    header { 
+    background-color: aqua;
     width: 800px; 
     display: flex; 
     justify-content: space-between; 
     align-items: center; 
     padding: 30px; 
     margin: 30px; 
-}
-.citiesHeader {
+    } 
+    h1 { 
     font-size: 2rem; 
     color: #350158; 
     margin: 0; 
-}
-button#btn { 
+    } 
+    button#btn { 
     display: inline-block; 
     padding: 10px 20px; 
     background: linear-gradient(15deg, #350158, #af23ae); 
@@ -347,18 +29,18 @@ button#btn {
     font-size: 1rem; 
     cursor: pointer; 
     transition: background-color 0.3s; 
-}
-button#btn:hover { 
+    } 
+    button#btn:hover { 
     background: linear-gradient(15deg, #43016f, #350158); /* Change gradient on hover */ 
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2); /* Add shadow on hover */ 
     transform: translateY(2px); /* Move button down slightly on hover */ 
-} 
-#city-info { 
+    } 
+    #city-info { 
     padding: 35px; 
-    margin: 30px;
-}
-.hide-me { 
+    margin: 30px; 
+    } 
+    .hide-me { 
     visibility: hidden; 
     opacity: 0; 
     transform: scale(.75); 
-} 
+    } 
